# youareanidiot

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
src/: main.rs
ui/: app.slint
wix/: main.wxs
